feat(reports): update reports flow
